# cpp-test-task-main_repo

./: CMakeLists.txt
Misc/: M_MemoryStream.cpp  M_MemoryStream.hpp  Memory.cpp  Memory.hpp  SystemMessageError.hpp
String/: ST_String.cpp  ST_String.hpp  generic.hpp
Types/: TY_Base.cpp  TY_Base.hpp  TY_Blob.cpp  TY_Blob.hpp
XML/: XML_Parser.cpp  XML_Parser.hpp  XML_xerces_String.cpp  XML_xerces_String.hpp
repository/: FUSReplaceReader.cpp  FUSimpleReader.cpp  utils.cpp  utils.hpp
repository/generics/: FUSReader.hpp
repository/specs/: ReplaceSpec.hpp  SimpleSpec.hpp
tests/: CMakeLists.txt  XercesGuard.cpp  XercesGuard.hpp  test_FUSReplaceReader.cpp  test_FUSimpleReader.cpp  test_Memory.cpp  test_MemoryStream.cpp  test_ST_String.cpp  test_TY_Blob.cpp  test_XML_Parser.cpp  test_utils.cpp  test_xerces_string.cpp
